argocd/examples/spring-boot/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app
  labels:
    app: spring-boot-app
    app.kubernetes.io/name: spring-boot-app
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: spring-boot-app
